# FlameChor

./: .gitignore  CHANGELOG.md  FlameChor.cabal  Hw1.hi  Hw1.hs  LICENSE  Makefile  README.md  TODO.txt  counter.hi  counter.hs  flame.cabal  hie.yaml  package.yaml  stack.yaml  start-ide.sh
.stack-work/: stack.sqlite3
.stack-work/ghci/231f2191/: cabal_macros.h
.stack-work/install/x86_64-linux/add7b492a866e4085b3574f6fc0eee9f0eebcffa83d69ae93c7127976c3b7333/9.4.7/lib/x86_64-linux-ghc-9.4.7/flame-plugin-0.1.0.2-1tiqLzqrJn17ZmJMSyEeBw/Flame/: Solver.dyn_hi
.stack-work/install/x86_64-linux/add7b492a866e4085b3574f6fc0eee9f0eebcffa83d69ae93c7127976c3b7333/9.4.7/lib/x86_64-linux-ghc-9.4.7/flame-plugin-0.1.0.2-1tiqLzqrJn17ZmJMSyEeBw/Flame/Solver/: ActsFor.hi  Unify.hi
.stack-work/install/x86_64-linux/add7b492a866e4085b3574f6fc0eee9f0eebcffa83d69ae93c7127976c3b7333/9.4.7/lib/x86_64-linux-ghc-9.4.7/flame-runtime-0.1.0.2-85uHbfgIiWUJjDH7JHj6UK/Flame/: Assert.hi  Core.dyn_hi  Do.hi  IFC.hi
.stack-work/install/x86_64-linux/add7b492a866e4085b3574f6fc0eee9f0eebcffa83d69ae93c7127976c3b7333/9.4.7/lib/x86_64-linux-ghc-9.4.7/flame-runtime-0.1.0.2-85uHbfgIiWUJjDH7JHj6UK/Flame/Runtime/: IFCRef.hi  IO.dyn_hi  IO.hi  Sealed.hi
.stack-work/install/x86_64-linux/add7b492a866e4085b3574f6fc0eee9f0eebcffa83d69ae93c7127976c3b7333/9.4.7/lib/x86_64-linux-ghc-9.4.7/flame-runtime-0.1.0.2-85uHbfgIiWUJjDH7JHj6UK/Flame/TCB/: IFC.dyn_hi  IFC.hi
.stack-work/install/x86_64-linux/add7b492a866e4085b3574f6fc0eee9f0eebcffa83d69ae93c7127976c3b7333/9.4.7/pkgdb/: flame-plugin-0.1.0.2-1tiqLzqrJn17ZmJMSyEeBw.conf  flame-runtime-0.1.0.2-85uHbfgIiWUJjDH7JHj6UK.conf  package.cache
HasChor/: HasChor.cabal  README.md
HasChor/src/: Choreography.hs
HasChor/src/Choreography/: ChoreoAsync.hs  Flaqr.hs  Location.hs  NetworkAsync.hs
HasChor/src/Choreography/Network/: Http.hs
HasChor/src/Choreography/NetworkAsync/: Http.hs
flame-plugin/: CHANGELOG.md  README.md  flame-plugin.cabal.save0  stack-debug.yaml  stack.yaml  start-ide-plugin-only.sh
flame-plugin/src/Flame/: Assert.hs  Core.hs  Principals.hs  Solver.hs
flame-plugin/src/Flame/Runtime/: Principals.hs  oldone.hs
flame-plugin/src/Flame/Solver/: ActsFor.hs  Data.hs  Norm.hs  Unify.hs
flame-runtime/: CHANGELOG.md  backup  flame-runtime.cabal  hie.yaml  stack.yaml
flame-runtime/playground/: make.sh
flame-runtime/playground/EDSL/: Main.hs
flame-runtime/playground/EDSL/Flame/EDSL/: Frontend.hs  IFC.hs
flame-runtime/playground/Flame/EDSL/: Do.hs  IFC.hs
flame-runtime/playground/async/: Main.hs
flame-runtime/playground/availFlame/: Main.hs
flame-runtime/playground/availableLargestBal/: Main.hs
flame-runtime/playground/bookseller/: CHANGELOG.md  LICENSE
flame-runtime/playground/bookseller-1-simple/: Main.hs
flame-runtime/playground/bookseller-2/: Main.hs
flame-runtime/playground/bookseller-3/: Main.hs
flame-runtime/playground/bookseller/app/: Main.hs
flame-runtime/playground/majorityQuorum/: Main.hi  Main.hs  MainNewCs.hs  extras
flame-runtime/playground/pBFT/: Main.hi  Main.hs  Mainbkup.hs
flame-runtime/src/Controlr/Monad/: Freer.hs
flame-runtime/src/Flame/: Do.hs  IFC.hs
flame-runtime/src/Flame/Runtime/: Crypto.hs  IFCRef.hs  IO.hs  Prelude.hs  Sealed.hs
flame-runtime/src/Flame/Runtime/Crypto/: KeyMap.hs  KeyedPrincipal.hs  Util.hs
flame-runtime/src/Flame/TCB/: Assume.hs  IFC.hs  NMIFC.hs
flame-runtime/src/Flame/TCB/Freer/: ChoreoLabelled.hs  IFC.hs
flame-runtime/src/MyHasChor/: Choreography.hs  HasChor.cabal  hie.yaml
flame-runtime/src/MyHasChor/Choreography/: Choreo.hs  ChoreoAsync.hs  ChoreoLabelled.hs  Flaqr.hs  Labelled.hs  LabelledAsync.hs  Location.hs  Network.hs  NetworkAsync.hs
flame-runtime/src/MyHasChor/Choreography/Network/: Http.hs  Local.hs
flame-runtime/src/MyHasChor/Choreography/NetworkAsync/: Http.hs
flame-runtime/src/MyHasChor/Control/Monad/: Freer.hs
flame-runtime/testsuite/: LICENSE.GPL
flame-runtime/testsuite/ghc-config/: ghc-config
flame-runtime/testsuite/tests/: Makefile
flame-runtime/testsuite/tests/constraints/should_compile/: Makefile  all.T  basic_constraints.hs  eqT001.hs  eqTAvailConf.hs  eqTAvailDisjInteg.hs  eqTAvailIdemp.hs  eqTAvailInteg.hs  eqTBotAvail.hs  eqTBotConf.hs  eqTBotInteg.hs  eqTConfAvail.hs  eqTConfDisjAvail.hs  eqTConfDisjInteg.hs  eqTConfIdemp.hs  eqTConfInteg.hs  eqTConfIntegBasis.hs  eqTConjAbsorb.hs  eqTConjAssoc.hs  eqTConjAvail.hs  eqTConjComm.hs  eqTConjConf.hs  eqTConjDistDisj.hs  eqTConjIdemp.hs  eqTConjIdent.hs  eqTConjInteg.hs  eqTConjTop.hs  eqTDisjAbsorb.hs  eqTDisjAssoc.hs  eqTDisjAvail.hs  eqTDisjBot.hs  eqTDisjComm.hs  eqTDisjConf.hs  eqTDisjIdemp.hs  eqTDisjIdent.hs  eqTDisjInteg.hs  eqTIntegAvail.hs  eqTIntegConf.hs  eqTIntegIdemp.hs  eqTNomEq.hs  (+10 more)
flame-runtime/testsuite/tests/constraints/should_fail/: all.T  eqTFail001.hs  eqTFail001.stderr  flTFail001.hs  flTFail001.stderr  flTFail002.hs  flTFail002.stderr  inferPcFail001.hs  inferPcFail001.stderr
flame-runtime/testsuite/tests/nmifc/should_compile/: Auction.hs  all.T  nm001.hs  nm002.hs  nm003.hs  nm004.hs  nm005.hs  nm006.hs  nm007.hs  nm008.hs  nm010.hs  nm011.hs  nm012.hs  nm013.hs
flame-runtime/testsuite/tests/nmifc/should_fail/: all.T  nmFail002.hs  nmFail002.stderr  nmFail005.hs  nmFail005.stderr  nmFail006.hs  nmFail006.stderr  nmFail007.hs  nmFail007.stderr
flame-runtime/testsuite/timeout/: Makefile
templates/: flame-hello.hsfiles
